// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render button correctly 1`] = `
<button
  class="btn btn-primary "
>
   
   
  Test Button
</button>
`;

exports[`<Button /> Render button with custom classes 1`] = `
<button
  class="btn one two three"
>
   
   
  Test Button
</button>
`;

exports[`<Button /> Render button with spinner 1`] = `
<button
  class="btn btn-primary "
>
  <span
    aria-hidden="true"
    class="spinner-border spinner-border-sm"
    role="status"
  />
   
   
   
  Test Button
</button>
`;
